<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <DUT Name="FLAGS" Id="{4aac9ee7-28b5-42b0-a202-fb916aac3a8b}">
    <Declaration><![CDATA[TYPE FLAGS :
STRUCT

	INIT_OK:BOOL;
	SAFETY_OK:BOOL;
	MANUAL:BOOL;
	AUTO:BOOL;
	
	
	ST1_JIG_STATUS: BOOL;
	ST1_RELEASE_CARRIER:BOOL;
	ST2_JIG_STATUS: BOOL;
	ST2_RELEASE_CARRIER:BOOL;
	ST3_JIG_STATUS: BOOL;
	ST3_RELEASE_CARRIER:BOOL;
	ST4_JIG_STATUS: BOOL;
	ST4_RELEASE_CARRIER:BOOL;
	ST5_JIG_STATUS: BOOL;
	ST5_RELEASE_CARRIER:BOOL;
	ST6_JIG_STATUS: BOOL;
	ST6_RELEASE_CARRIER:BOOL;
	ST7_JIG_STATUS: BOOL;
	ST7_RELEASE_CARRIER:BOOL;
	ST8_JIG_STATUS: BOOL;
	ST8_RELEASE_CARRIER:BOOL;
	ST9_JIG_STATUS: BOOL;
	ST9_RELEASE_CARRIER:BOOL;

	
	DOORS_OPEN:BOOL;
	F2_END:BOOL;
	GEMMA: STRING;
	
	MOTOR_Q1_INIT_OK:BOOL;
	MOTOR_Q1_POSITION:DINT;
	MOTOR_Q2_INIT_OK:BOOL;
	MOTOR_Q2_POSITION:DINT;



END_STRUCT
END_TYPE]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>