<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <DUT Name="SAFETY_IN" Id="{22b3441c-2563-4be7-8e1f-635be7cbaa87}">
    <Declaration><![CDATA[TYPE SAFETY_IN :
STRUCT

	DOORS_FBerr:BOOL;
	DOORS_COMerr:BOOL;
	DOORS_State:USINT;
	DOOR_VAC_CLOSED:BOOL;
	DOOR_Q1_CLOSED:BOOL;
	DOOR_Q2_CLOSED:BOOL;
	DOOR_PMAX_CLOSED:BOOL;
	DOOR_PRINT_CLOSED:BOOL;

	NOT_AUS_FBerr:BOOL;
	NOT_AUS_COMerr:BOOL;
	NOT_AUS_State:USINT;

END_STRUCT
END_TYPE]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>