<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <POU Name="SAFETY" Id="{43915553-f271-40f2-bf81-aae678947fef}">
    <Declaration><![CDATA[PROGRAM SAFETY
VAR
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[SAFETY_OUT.DOORS_RUN:=TRUE;

SAFETY_OUT.DOORS_ErrAck:=SAFETY_OUT.NOT_AUS_RESET;


IF SAFETY_IN.NOT_AUS_State=1 THEN

	FLAGS.SAFETY_OK:=TRUE;

ELSE

	FLAGS.SAFETY_OK:=FALSE;
END_IF;
]]></ST>
    </Implementation>
    <ObjectProperties />
  </POU>
</TcPlcObject>